--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,7 +12,8 @@ tasks:
     cluster_config:
       desc: Apply global yaml manifests
       cmds:
-      - kubectl apply --recursive --filename ./manifests/config
+      - kubectl apply -f ./manifests/config/namespace.yaml
+      - kubectl apply -f ./manifests/config/ingress.yaml ## TODO : uncomment to use nginx ingress
 
     ###################################################
     # Service Builds
@@ -37,10 +38,8 @@ tasks:
         cmds: 
         - kubectl apply -f ./manifests/service_one/deployment.yaml
         - kubectl apply -f ./manifests/service_one/service.yaml
-        - kubectl apply -f ./manifests/service_one/ingress.yaml
     deploy_two:
         desc: Deploy service_two k8s yaml files
         cmds: 
         - kubectl apply -f ./manifests/service_two/deployment.yaml
         - kubectl apply -f ./manifests/service_two/service.yaml
-        - kubectl apply -f ./manifests/service_two/ingress.yaml
