--- a/manifests/user-service/secret.yaml
+++ b/manifests/user-service/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: mysql-yaml
+  namespace: go-microservices
 type: kubernetes.io/basic-auth
 stringData:
   password: sqlpassword1234
