--- a/manifests/user-service/service.yaml
+++ b/manifests/user-service/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-one
+  name: user-service
   namespace: go-microservices
 spec:
   selector:
-    app: service-one
+    app: user-service
   ports:
     - port: 80
       targetPort: 8080
