--- a/manifests/mysql/deployment.yaml
+++ b/manifests/mysql/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
-  namespace: mysql-yaml
+  namespace: go-microservices
 spec:
   selector:
     matchLabels:
