--- a/manifests/api-service/service.yaml
+++ b/manifests/api-service/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: note-service
+  name: api-svc
   namespace: go-microservices
 spec:
   selector:
-    app: note-service
+    app: api-svc
   ports:
     - port: 80
       targetPort: 8080
