--- a/manifests/mysql/mysql-storage.yaml
+++ b/manifests/mysql/mysql-storage.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql-pv-volume-2
-  namespace: mysql-yaml
+  namespace: go-microservices
   labels:
     type: local
 spec:
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim-2
-  namespace: mysql-yaml
+  namespace: go-microservices
 spec:
   storageClassName: manual
   accessModes:
